--- a/myApp/src/pages/about/about.html
+++ b/myApp/src/pages/about/about.html
@@ -8,7 +8,6 @@
 
 <ion-content padding>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    This is our sweet ionic app. Hopefully one day it can work as a scratch pad calculator. 
   </p>
 </ion-content>
