--- a/myApp/src/pages/contact/contact.html
+++ b/myApp/src/pages/contact/contact.html
@@ -8,10 +8,10 @@
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
+    <ion-list-header>Hit us up on slack</ion-list-header>
     <ion-item>
       <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+      #calcpad_comp225
     </ion-item>
   </ion-list>
 </ion-content>
