Got the canvas page working!

--- a/myApp/src/pages/canvas/canvas.html
+++ b/myApp/src/pages/canvas/canvas.html
@@ -6,13 +6,18 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>canvas</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>canvas</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="Canvas">
+    <p>
+        This is where the canvas will be!
+    </p>
+    <canvas>
 
+  </canvas>
 </ion-content>
