Rearragned tabs, changed tab icons and changed home to calculator

--- a/myApp/src/pages/about/about.html
+++ b/myApp/src/pages/about/about.html
@@ -10,4 +10,6 @@
   <p>
     This is our sweet ionic app. Hopefully one day it can work as a scratch pad calculator. 
   </p>
+
+  <button> I'm a button!! </button>
 </ion-content>
