Refactored some pages

--- a/myApp/src/pages/canvas/canvas.html
+++ b/myApp/src/pages/canvas/canvas.html
@@ -7,7 +7,7 @@
 <ion-header>
 
     <ion-navbar>
-        <ion-title>canvas</ion-title>
+        <ion-title>Canvas</ion-title>
     </ion-navbar>
 
 </ion-header>
