--- a/myApp/src/pages/canvas/canvas.html
+++ b/myApp/src/pages/canvas/canvas.html
@@ -12,12 +12,32 @@
 
 </ion-header>
 
-
 <ion-content padding class="Canvas">
-    <p>
-        This is where the canvas will be!
-    </p>
-    <canvas #myCanvas (touchstart)="handleStart($event)" (touchmove)="handleMove($event)">
+    <ion-toolbar id="top-toolbar">
+        <ion-buttons left>
+            <button *ngFor="let color of availableColors" icon-only ion-button (click)="changeColor(color)">
+              <ion-icon [style.color]="color" name="brush"></ion-icon>
+          </button>
+        </ion-buttons>
+        <ion-buttons right>
+            <button style="border: 1px solid #cecece;" ion-button icon-only style.color="#fff" (click)="changeColor('#fff')">
+              <ion-icon style="color: #fff;" name="square"></ion-icon>
+          </button>
+        </ion-buttons>
+    </ion-toolbar>
 
-  </canvas>
+    <canvas #myCanvas (touchstart)="handleStart($event)" (touchmove)="handleMove($event)"> </canvas>
+
+    <ion-toolbar id="bottom-toolbar">
+        <ion-buttons left>
+            <button color="dark" ion-button icon-only (click)="clearCanvas()"><ion-icon name="trash"></ion-icon></button>
+        </ion-buttons>
+        <ion-buttons right>
+            <button color="dark" ion-button icon-only (click)="changeSize(5)"><ion-icon style="font-size: 0.25em;" name="radio-button-on"></ion-icon></button>
+            <button color="dark" ion-button icon-only (click)="changeSize(10)"><ion-icon style="font-size: 0.5em;" name="radio-button-on"></ion-icon></button>
+            <button color="dark" ion-button icon-only (click)="changeSize(20)"><ion-icon style="font-size: 1em;" name="radio-button-on"></ion-icon></button>
+            <button color="dark" ion-button icon-only (click)="changeSize(50)"><ion-icon style="font-size: 2em;" name="radio-button-on"></ion-icon></button>
+            <button color="dark" ion-button icon-only (click)="changeSize(200)"><ion-icon style="font-size: 3em;" name="radio-button-on"></ion-icon></button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-content>
