added contact photo

--- a/myApp/src/pages/contact/contact.html
+++ b/myApp/src/pages/contact/contact.html
@@ -7,11 +7,17 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Hit us up on slack</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      #calcpad_comp225
-    </ion-item>
-  </ion-list>
+  <ion-content padding>
+    <h2>Project</h2>
+    <p>
+        To learn more about CalcPad, visit our github repo @Brettgraham13/calcpad.
+    </p>
+    <h2>Developers</h2>
+    <p>
+      We're a team of four students at Macalester College in St. Paul, MN. 
+      Read our short bios here!
+    </p>
+    <p>
+      <img src="assets/imgs/ionatan.jpg" width = "200px" height = "200px" alt="io">
+    </p>
 </ion-content>
