updated contact pages

--- a/myApp/src/pages/contact/contact.html
+++ b/myApp/src/pages/contact/contact.html
@@ -17,7 +17,24 @@
       We're a team of four students at Macalester College in St. Paul, MN. 
       Read our short bios here!
     </p>
-    <p>
-      <img src="assets/imgs/ionatan.jpg" width = "200px" height = "200px" alt="io">
-    </p>
+    <div class="content">
+      <img src="assets/imgs/nina.jpg" width = "100px" height = "100px" alt="nina" align="top"> 
+      <h3>Nina Brim</h3>
+      <p>Short bio</p>
+    </div>​
+    <div class="content">
+      <img src="assets/imgs/brett.jpg" width = "100px" height = "100px" alt="brett" align="top"> 
+      <h3>Brett Graham</h3>
+      <p>Short bio</p>
+    </div>​
+    <div class="content">
+      <img src="assets/imgs/ionatan.jpg" width = "100px" height = "100px" alt="io" align="top"> 
+      <h3>Ionatan Kuperwajs</h3>
+      <p>Short bio</p>
+    </div>​
+    <div class="content">
+      <img src="assets/imgs/scott.jpg" width = "100px" height = "100px" alt="nina" align="top"> 
+      <h3>Scott Pederson</h3>
+      <p>Short bio</p>
+    </div>​
 </ion-content>
