--- a/myApp/src/pages/calc/calc.html
+++ b/myApp/src/pages/calc/calc.html
@@ -46,7 +46,7 @@
 
     <input type="button" value="." (click)="copyToDisplay('.')">
 
-    <input type="button" value="=" class="equals">
+    <input type="button" value="=" (click)="compute()" class="equals">
 
 
 </ion-content>
