updated contact pages

--- a/myApp/src/pages/contact/contact.html
+++ b/myApp/src/pages/contact/contact.html
@@ -34,7 +34,7 @@
     </div>​
     <div class="content">
       <img src="assets/imgs/scott.jpg" width = "100px" height = "100px" alt="nina" align="top"> 
-      <h3>Scott Pederson</h3>
+      <h3>Scott Pedersen</h3>
       <p>Short bio</p>
     </div>​
 </ion-content>
