adding tutorial page

--- a/myApp/src/pages/about/about.html
+++ b/myApp/src/pages/about/about.html
@@ -8,4 +8,22 @@
 
 <ion-content padding>
 
+    <div class = "type"> Canvas </div>
+    
+    <p> Ready to get started using CalcPad? Just follow these easy steps! </p>
+
+    <div class = "step"> Step 1. </div> 
+
+    <p> First, use your finger to draw the expression you'd like to calculate!</p>
+
+    <video src = "assets/imgs/canvas1.mp4" autoplay loop> </video>
+
+    <div class = "step"> Step 2. </div> 
+
+    <p> When you're ready to evaluate, draw an equals sign!</p>
+
+    <video src = "assets/imgs/canvas2.mp4" autoplay loop> </video>
+
+    <div class = "type"> Calculator </div> 
+
 </ion-content>
