updated some global theming

--- a/myApp/src/pages/calc/calc.html
+++ b/myApp/src/pages/calc/calc.html
@@ -8,7 +8,7 @@
 
     <div id = "container">
 
-        <div class="display" (swipe) = "swipe($event)"> {{screen}} </div>
+        <div class="display" (swipe) = "swipe($event)" padding> {{screen}} </div>
 
         <button ion-button (click)="clearDisplay()" large> c </button>
 
