--- a/myApp/src/pages/my-script-canvas/my-script-canvas.html
+++ b/myApp/src/pages/my-script-canvas/my-script-canvas.html
@@ -15,11 +15,5 @@
 
 
 <ion-content padding>
-  <div id= "editor" #tref> </div>
-  <!-- <myscript-math-web
-    applicationkey="7498d8dc-55db-4f40-8a80-625de7e17bed"
-    hmackey="2ef4521b-5697-4653-8f8f-defede0bac55">
-</myscript-math-web> -->
-
-<!-- <canvas #tref></canvas> -->
+  <div touch-action='none' class = "editor" #editor> </div>
 </ion-content>
