fixed canvas button icons

--- a/myApp/src/pages/my-script-canvas/my-script-canvas.html
+++ b/myApp/src/pages/my-script-canvas/my-script-canvas.html
@@ -44,10 +44,10 @@
 <ion-content padding>
     <div id = "container">
 
-    <button ion-button (click)="clear()" medium> c </button>
-    <button ion-button (click)="redo()" medium> r</button>
-    <button ion-button (click)="undo()" medium> u </button>
-    <button ion-button (click)="convert()" medium> v </button>
+    <button ion-button (click)="clear()" medium> <ion-icon name="trash"></ion-icon> </button>
+    <button ion-button (click)="undo()" medium> <ion-icon name="undo"></ion-icon> </button>
+    <button ion-button (click)="redo()" medium> <ion-icon name="redo"></ion-icon></button>
+    <button ion-button (click)="convert()" medium> <ion-icon name="calculator"></ion-icon> </button>
 
     </div>
 
