added tutorials and contact and logo

--- a/myApp/src/pages/contact/contact.html
+++ b/myApp/src/pages/contact/contact.html
@@ -12,29 +12,61 @@
     <p>
         To learn more about CalcPad, visit our github repo @Brettgraham13/calcpad.
     </p>
+    <p>
+      <img id="logo" src="assets/imgs/calcpad_logo.png"/>
+    </p>
     <h2>Developers</h2>
     <p>
       We're a team of four students at Macalester College in St. Paul, MN. 
       Read our short bios here!
     </p>
-    <div class="content">
-      <img src="assets/imgs/nina.jpg" width = "100px" height = "100px" alt="nina" align="top"> 
-      <h3>Nina Brim</h3>
-      <p>Short bio</p>
-    </div>​
-    <div class="content">
-      <img src="assets/imgs/brett.jpg" width = "100px" height = "100px" alt="brett" align="top"> 
-      <h3>Brett Graham</h3>
-      <p>Short bio</p>
-    </div>​
-    <div class="content">
-      <img src="assets/imgs/ionatan.jpg" width = "100px" height = "100px" alt="io" align="top"> 
-      <h3>Ionatan Kuperwajs</h3>
-      <p>Short bio</p>
-    </div>​
-    <div class="content">
-      <img src="assets/imgs/scott.jpg" width = "100px" height = "100px" alt="nina" align="top"> 
-      <h3>Scott Pedersen</h3>
-      <p>Short bio</p>
-    </div>​
+
+    <ion-card>
+      <img src="assets/imgs/nina.jpg"/>
+      <ion-card-content>
+        <ion-card-title>
+          Nina Brim
+          </ion-card-title>
+        <p>
+          Insert bio here
+        </p>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <img src="assets/imgs/brett.jpg"/>
+      <ion-card-content>
+        <ion-card-title>
+          Brett Graham
+          </ion-card-title>
+        <p>
+          Insert bio here
+        </p>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <img src="assets/imgs/ionatan.jpg"/>
+      <ion-card-content>
+        <ion-card-title>
+          Ionatan Kuperwajs
+          </ion-card-title>
+        <p>
+          Insert bio here
+        </p>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <img src="assets/imgs/scott.jpg"/>
+      <ion-card-content>
+        <ion-card-title>
+          Scott Pedersen
+          </ion-card-title>
+        <p>
+          Insert bio here
+        </p>
+      </ion-card-content>
+    </ion-card>
+    
 </ion-content>
