--- a/myApp/src/pages/calc/calc.html
+++ b/myApp/src/pages/calc/calc.html
@@ -10,7 +10,7 @@
 
         <div class="display" (swipe) = "swipe($event)" padding> {{screen}} </div>
 
-        <div class = "deleteButton" ion-button (click)="deleteCharacter()" padding> < </div>
+        <div class = "deleteButton" ion-button outline (click)="deleteCharacter()" padding> < </div>
 
         <button ion-button (click)="clearDisplay()" large> c </button>
 
@@ -48,7 +48,7 @@
 
         <button ion-button (click)="copyToDisplay('.')" large> . </button>
 
-        <button ion-button class = "equals" (click)="compute()" large> = </button>
+        <button ion-button outline class = "equals" (click)="compute()" large> = </button>
 
     </div>
 
