--- a/src/pages/my-script-canvas/my-script-canvas.html
+++ b/src/pages/my-script-canvas/my-script-canvas.html
@@ -1,7 +1,7 @@
 <ion-header>  
   <ion-navbar>
     <ion-title>
-        MyScript Canvas
+        Canvas
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -16,7 +16,7 @@
     <button ion-button (click)="clear()" medium outline> <ion-icon name="trash"></ion-icon> </button>
     <button ion-button (click)="undo()" medium outline> <ion-icon name="undo"></ion-icon> </button>
     <button ion-button (click)="redo()" medium outline> <ion-icon name="redo"></ion-icon></button>
-    <button ion-button (click)="convert()" medium  outline id = "calc-button"> <ion-icon name="calculator"></ion-icon> </button>
+    <button ion-button (click)="convert()" medium  outline id = "calc-button"> = </button>
 
     </div>
 
