removed scroll options

--- a/src/pages/calc/calc.html
+++ b/src/pages/calc/calc.html
@@ -4,7 +4,7 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content padding no-bouce>
+<ion-content class="no-scroll" padding>
 
     <div id = "container">
 
