--- a/src/pages/my-script-canvas/my-script-canvas.html
+++ b/src/pages/my-script-canvas/my-script-canvas.html
@@ -10,7 +10,8 @@
     
  -->
 
-<ion-content padding>
+<ion-content class="no-scroll" padding >
+
     <div id = "container">
 
     <button ion-button (click)="clear()" medium outline> <ion-icon name="trash"></ion-icon> </button>
@@ -21,4 +22,5 @@
     </div>
 
   <div touch-action='none' class="editor" #editor></div>
+
 </ion-content>
