tutorial and contact pages

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -27,8 +27,9 @@
         <ion-card-title>
           Nina Brim
           </ion-card-title>
-        <p>
-          Insert bio here
+        <p id="bio">
+            <strong>Lead UX Design</strong>. Nina is a mathematics major from Portland, OR. Her academic interests include combinatorics and graph theory. 
+            When she is not crying over merge conflicts, she enjoys playing guitar and rewatching The Office.
         </p>
       </ion-card-content>
     </ion-card>
@@ -39,8 +40,9 @@
         <ion-card-title>
           Brett Graham
           </ion-card-title>
-        <p>
-          Insert bio here
+        <p id="bio">
+          <strong>OCR Engineer, Functional Analyst</strong>. Brett is an economics, computer science, and mathematics major from Celebration, FL. His academic interests include data modeling and software development. 
+          When he is not sifting through Myscript's documentation, Brett enjoys betting on baseball and long walks on the beach.
         </p>
       </ion-card-content>
     </ion-card>
@@ -51,8 +53,9 @@
         <ion-card-title>
           Ionatan Kuperwajs
           </ion-card-title>
-        <p>
-          Insert bio here
+        <p id="bio">
+          <strong>Solutions Architect</strong>. Ionatan is a neuroscience, computer science, and mathematics major from Redmond, WA. When he's not activley posting in the 
+          MyScript developer forums, his is research interests are in theoretical modeling of neural populations. He enjoys hiking, traveling, and watching soccer and the NBA.
         </p>
       </ion-card-content>
     </ion-card>
@@ -63,8 +66,9 @@
         <ion-card-title>
           Scott Pedersen
           </ion-card-title>
-        <p>
-          Insert bio here
+        <p id="bio">
+          <strong>Calculator Backend Engineer</strong>. Scott is a chemistry and applied math and statistics double major from Far Hills, NJ. His academic interests include the synthesis 
+          of novel heterocyclic ring systems and organic materials research. When he's not programming, he enjoys working in lab, playing flute, saxophone, or piano, and biking, hiking, or sailing.
         </p>
       </ion-card-content>
     </ion-card>
