modified about pages

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -29,14 +29,7 @@
                 <p>
                     <img src="assets/imgs/symbols.png">
                 </p>
-                <li>Equations with one unknown can be solved, but the variable has to be highlighted with a question mark</li>
-                <p>
-                    <img id="equations" src="assets/imgs/solver.png">
-                </p>
-                <li>Equations with more than one unknown can be recognized and typeset, but not solved</li>
-                <p>
-                    <img id="equations" src="assets/imgs/integral.png">
-                </p>
+               
             </ul>
         </ion-slide> 
 
@@ -44,7 +37,6 @@
             <h2>Basic Algebra</h2>
             <p>
                 Draw mathematical expressions on the canvas, and press the equals button in order to calculate them. 
-                Undo, redo, and clear all buttons are also available.
             </p>
             <video src = "assets/imgs/basic_alg.mov" autoplay loop> </video>
         </ion-slide>
@@ -60,7 +52,7 @@
         <ion-slide>
             <h2>Functions</h2>
             <p>
-                A wide range of advanced calculation options are available, such as trigonometric functions and logarithms. More complex equations can be typeset.
+                A wide range of advanced calculation options are available, such as trigonometric functions and logarithms.
             </p>
             <video src = "assets/imgs/advanced_fun.mov" autoplay loop> </video>
         </ion-slide>
@@ -77,9 +69,6 @@
                 <li>Exponents are denoted by putting two multiplication symbols in a row with the exponent wrapped in parentheses</li>
                 <li>Missing parentheses at the end of a string are autofilled, and a confirmation message checks that the appropriate string was generated</li>
                 <li>Strings larger than 15 characters are not handled</li>
-                <li>Standard order of operations is observed (PEMDAS)</li>
-                <li>A back Button, clear button, and equals button are available</li>
-                <li>Multiplication is implied between parentheses and other sets of parentheses or numbers</li>
             </ul>
         </ion-slide> 
 
