Fixed some calc.ts bugs and commented, added lots of woflram and myscript stuff

--- a/src/pages/my-script-canvas/my-script-canvas.html
+++ b/src/pages/my-script-canvas/my-script-canvas.html
@@ -18,6 +18,8 @@
     <button ion-button (click)="undo()" medium outline> <ion-icon name="undo"></ion-icon> </button>
     <button ion-button (click)="redo()" medium outline> <ion-icon name="redo"></ion-icon></button>
     <button ion-button (click)="convert()" medium  outline id = "calc-button"> = </button>
+    <button ion-button (click)="export()" medium outline><ion-icon name = "cloud-upload"></ion-icon></button>
+
 
     </div>
 
