MADE CHANGES AND STUFF

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -38,7 +38,7 @@
             <p>
                 Draw mathematical expressions on the canvas, and press the equals button in order to calculate them. 
             </p>
-            <video src = "assets/imgs/basic_alg.mov" autoplay loop> </video>
+            <video src = "assets/imgs/basic_alg.mov" onload="" loop> </video>
         </ion-slide>
         
         <ion-slide>
